inside the course

--- a/confidance.html
+++ b/confidance.html
@@ -49,11 +49,23 @@ course-description:
 who-its-for:
   heading: Who is confiDance is for?
   description_html: >-
-    <p>Liberation Through Movement is designed for women seeking a global community and shared passion. It welcomes those desiring to align with their true nature, joy, and peace through creativity and pleasure. This course is for individuals looking to explore feminine expressions and find support in a community of like-minded women.</p>
+    This program has been designed to support ANY WOMAN who is ready to feel more confidence in her day to day life, as well as to connect deeply with her creativity, sense of inspiration and pleasure in life- to fall in love with the beauty of her body, her spirit, and her life.</p><p>This is for women who have a desire to connect with their love and passion for dance, and to use intentional movement as a healing modality and a pathway to personal transformation and liberation.
   background-image:
     background_image: /uploads/images/manamei-58.jpg
     image_focus: center
     overlay_style: dark
+inside-the-course:
+  heading: Inside Confidance
+  description_html: >-
+    <p>Easy to follow Step-by-Step Process for Embodied Liberation</p>
+  module:
+    - title: Step 1 - Activate the Dance of the Arms
+    - title: Step 2 - Activate the Dance of the Spine
+    - title: Step 3 - Activate the Dance of the Hips & Legs
+    - title: Step 4 - Activate your FULL BODY Free Dance
+  background-image:
+    background_image: /uploads/backgrounds/manamei-4.jpg
+    image_focus: bottom
 testimonials:
   background_image: /uploads/backgrounds/manamei-4.jpg
   testimonials:
@@ -153,8 +165,8 @@ seo:
 <!-- Who It's For -->
 {% include who-its-for.html %}
 
-<!-- About Mana & LTM -->
-{% include about-mana-and-ltm.html %}
+<!-- Inside the Course -->
+{% include inside-the-course.html %}
 
 <!-- Investment -->
 {% include investment-ltm.html %}
