structure minus FAQ

--- a/confidance.html
+++ b/confidance.html
@@ -69,76 +69,39 @@ inside-the-course:
 testimonials:
   background_image: /uploads/backgrounds/manamei-4.jpg
   testimonials:
-    - testimonial: I am allowing energy to move through me, finding my own medicine, and the power in this sisterhood continually helps me to come home to myself. I am eternally grateful.
-      author: — Julie De Lorenzo
-    - testimonial: Before this tribe I rejected a part of myself that longed for sisterhood because I believed that to be impossible. This tribe has showed me just how wrong I was, it has helped me heal the sister wound. And I am so grateful for that.
-      author: — Oumayma Rose
-    - testimonial: With the support from women around the world, this community shows me ways to cope with my pain and to open up to new experiences. It has inspired me to dance alone in my room and to be more expressive, to speak up for myself and to show others that they are heard, understood, and supported.
-      author: — Ashley Lynn Clark
-    - testimonial: This tribe helps me connect more with my intuition and has showed me once more that my Soul-Language is movement & Dance. Being part of a tribe full of women who feel liberated through movement makes my heart sing!
-      author: — Aisha Luke
-    - testimonial: Since I met Mana Mei and joined this Tribe, beautiful changes have been happening into and throughout my life... Surrender to the guidance. Find places like this to grow together, bounded by an invisible magic line with people going in the same direction, with love.
-      author: — Gloria Da Lio
-    - testimonial: This tribe reminds us that we are not alone! And that it’s ok to feel. By embracing our feelings we empower ourselves and others!
-      author: — Alex Deville
+    - testimonial: I’m getting to know myself better with every Mana Movement practice. I’m becoming more confident and believe in myself. I'm showing myself to the world in a more authentic way.
+    - testimonial: My main intention when I began the Mana Movement practice was to feel more open, comfortable, confident, and at ease in my own body—ultimately to trust myself on a deeper level. I wanted to break free of worrying about how others might perceive or judge me. And wow, so far the whole experience has already been about this—and so much more.
+    - testimonial: My energy is exploding! I feel so emotionally stable and safe. Life is just flowing…
+    - testimonial: I clearly see and feel the changes in my life and in my body. I see more fluidity in every parts of the every day life, professional, personal…It’s really amazing and magical !!! I feel more present, more grounded, more feminine, more aware, more confident, more a lot of things!!! I also have more creativity.
   border: border-y border-feature
-about: 
-  heading: The story of Mana Mei & Liberation Through Movement
-  description_html: In early 2020, the world began shutting down. Borders closed, neighborhoods closed, doors closed, and hearts began closing as people were forced to enter into a time of isolation and separateness… a sense of closeness, intimacy, and community greatly began suffering, and so did many people as they were left alone, stripped of the human connection that is so vital for our health and wellbeing.</p><p>But although this may sound like the start of a tragic story, it is not. Because as is the way of life, as some doors shut, others open. The rise of virtual global communities  began spreading like wildfire as people all over the world also rose up to meet the shifting paradigm. People everywhere began seeking like-minded, like-spirited tribe in every continent, uniting together under common interests and shared passions. And within the flow of this massive global movement to the virtual space, the Liberation Through Movement Tribe was born.</p><p>Mana Mei is an international feminine embodiment facilitator, sacred embodied ritual space creator, and muse of all things dance and movement. Her mission and passion on this Earth walk is to create experiences where women can come together in transformation and growth through the feminine arts. For women to find safety in sisterhood, and permission through collective support to be their most radiant and fully expressed badass creatrix selves.</p><p>And in early 2020, when the global movement to the virtual field ignited, another movement also sparked into existence… the LIBERATION THROUGH MOVEMENT.</p><p>Mana Mei birthed the Liberation Through Movement Tribe as a Facebook Group open to all women interested in dance, movement, embodiment, and global sisterhood. Her desire was to create a space where women could feel connected to other sisters around the world through the universal language of dance and embodiment, and remember that they are not alone. That even during a time of physical separateness, we are here to support one another, hold each other in tenderness through the challenges of life, and continue rising together, celebrating our feminine power, and reconnecting with embodied pleasure and authentic creative expression.</p><p>During 2020, the Liberation Through Movement Tribe grew from just a few hundred women, to over 3,000 women spanning every continent! Within the tribe, women cultivated trust in each other through vulnerable and authentic sharing, they explored different facets of their feminine expression through embodied dance experiences, they leaned into being seen and heard by their sisters, and they co-created a beautiful, thriving global tribe of rising women to inspire, be inspired, support, and be supported, through all of life’s twists and turns.</p><p><strong>For many women, the Liberation Through Movement Tribe BECAME HOME.</strong></p><p>But by the end of 2020, it was becoming very clear to Mana Mei that the Facebook platform was not in alignment with the core values of this tribe. Tribe members were getting their content censored, blocked, and their freedom of expression was stifled. Mana realized that the rules of Facebook went against everything the community stands for. That without FREEDOM OF EXPRESSION, women would never fully thrive the way they deserve. So Mana made the very edgy decision to move the tribe off Facebook and rebirth the community on an independent platform where ownership of the community rested in the hands of Mana Mei and the members of the tribe.</p><p>Mana knew that stepping into this next evolution of Liberation Through Movement would require a deeper commitment to serving her community, and providing women with access to the knowledge and experiences needed to continue rising together in embodied sisterhood. This commitment comes in the  form of consistent offerings-  weekly opportunities for all members of the tribe to dive into new unique classes, workshops, and rituals all centered around feminine embodiment and cultivating creative expression. Through this consistency of showing up with and for each other, we are able to co-create a potent container to give us the strength we need to continue navigating life with grace and aligning ourselves with our highest potential as embodied feminine leaders.</p><p><em>Liberation Through Movement is a place to call home, where we value freedom of expression and the cultivation of embodied feminine power. This tribe was created for you, WELCOME HOME.</em></p>
-  featured_image: /uploads/images/manamei-6.jpg
 investment:
   heading: The Offering
   includes:
     heading: What's included
     list:
-      - list-item: 1 monthly embodied movement experience with Mana Mei
-      - list-item: >-
-          1 monthly guided experience with embodied temple keeper or a guest
-          facilatotr embodiement experience
-      - list-item: >-
-          1 seasonal women's witnessing circle hosted by an embodied temple
-          keeper
-      - list-item: Access to all replays of monthly offerings
-      - list-item: >-
-          Access to all replays of Mana Mei's previous offerings, including
-          Prosperity Bloom, The Joyous Body, Grief & Rage Ritual, Liberation
-          Through Movement 5-Day Journey, (We Are) The Alchemists, and Dance
-          Medicine 5-Day Journey
-      - list-item: >-
-          Special VIP discounts for Immersions and Courses run by Mana Mei,
-          including MANA Ritual Movement, Wisdom Body, and Embodied Temple
-          Keepers
-      - list-item: >-
-          A platform that we  OWN as a community where you can post and share
-          about your journey CENSORSHIP-FREE! (yah, it’s about time! Let the
-          nipples flow)
-      - list-item: >-
-          The opportunity to cultivate life-long deep and authentic connections
-          with sisters all around the world - this is priceless!
+      - list-item: Receive lifetime access to all course curriculum!
+      - list-item: 4 video-guided Mana Movement Practices
+      - list-item: 2 BONUS Embodied Movement Practices
+      - list-item: 1 Introduction to Mana Movement PDF
+      - list-item: 1 Welcome Video
+      - list-item: PLUS 2 months Free membership to the Liberation Through Movement Workshop Library
   pricing:
     pay-in-full:
-      heading: Monthly Membership
-      price: $12.99
+      heading: Pay in Full
+      price: $90
     payment-plan:
-      show: false
-      heading: Payment plan
-      price: $180 x 12 months
+      show: true
+      heading: 2-Month Payment Plan
+      price: $50/month
   background_image: /uploads/images/manamei-60.jpg
   overlay_style: dark
 cta:
-  heading: Welcome home
+  heading: Are you ready to meet every moment from a place of feeling open, courageous, and full of creative inspiration?
   description_html: >-
-    <p>Humans are social creatures, we need each other. When we come together in
-    community and shared passion, we help give each other the support,
-    inspiration, and strength needed to align with our true nature, our
-    radiance, and our ability to thrive.</p><p>As women, it is our time to rise
-    together. To remind each other that we are not alone in our journey. That we
-    are worthy to be living lives filled with joy and unwavering peace. And that
-    we can experience the growth we desire through creativity and pleasure- the
-    feminine way.​</p>
+    <p>Are you ready to move through life feeling deeply safe and expansively free?</p><p>AconfiDance will help you reclaim your radiant expression!​</p><p>To meet every moment of life with a sense of EXPANSION, softness, and openness, while also being ANCHORED, grounded, and centered.</p><p>To cultivate more safety and freedom in your body, and in your capacity to express your true self through the way you move, both in your dance and in every moment of your life!</p>
   button:
-    text: Join the tribe
-    url: https://liberationthroughmovement.mn.co
+    text: Enroll Now
+    url: https://manamei.teachable.com/p/confidance
   background-image:
     background_image: /uploads/images/manamei-47.jpg
     background-position: center
@@ -172,7 +135,18 @@ seo:
 {% include investment-ltm.html %}
 
 <!-- Testimonials -->
-{% include testimonials.html %}
+<section class="bg-image-style bg-overlay 
+{{ page.testimonials.overlay_style }} bg-[url('{{page.testimonials.background_image}}')] p-10p bg-overlay-light {{page.testimonials.border}} {{page.testimonials.border}}">
+    <p class="text-feature">Thousands of women around the world are using Mana Movement as a <span class="font-serif">life-changing</span> method of personal transformation...</p>
+    <div class="testimonial-container">
+        {% for item in page.testimonials.testimonials %}
+        <div class="testimonial-item">
+            <p class="text-center"><em>"{{item.testimonial}}"</em></p>
+            <p class="text-right">{{item.author}}</p>
+        </div>
+        {% endfor %}
+    </div>
+</section>
 
 <!-- CTA -->
 {% include cta-course.html %}
