--- a/confidance.html
+++ b/confidance.html
@@ -98,11 +98,11 @@ cta:
     background-position: 
     overlay_style: dark
 seo: 
-  title: Liberation Through Movement - A Global Women's Embodiment Tribe
-  description: Join the Liberation Through Movement tribe, a global community for women to explore feminine embodiment through dance and movement. Dive into a journey of self-discovery, empowerment, and connection, guided by Mana Mei. Embrace the transformative power of sisterhood and creative expression.
-  keywords: Liberation Through Movement, feminine embodiment, women's empowerment, dance and movement, global community, Mana Mei, sisterhood, creative expression, self-discovery, embodiment practices, embodied movement
-  social_image: /uploads/images/manamei-59.jpg
-  hide-from-google: false
+  title: confiDance - A Mana Movement Program to FREE your authentic expression on and off the dance floor
+  description: confiDance is a step-by-step Mana Movement Program where you will be guided into activating the Feminine Pathways through every part of the body in order to bring you into deep connection with your authentic movement, building your unique free flow dance that is sourced from the internal impulses of your body, your inner voice of embodied wisdom, your unique radiant Spirit, and the pleasure of fully inhabiting your authentic expression, both on and off the dance floor!
+  keywords: Mana Movement, feminine embodiment, women's empowerment, dance and movement, Mana Mei, creative expression, embodiment practices, embodied movement, authentic dance
+  social_image: /uploads/images/manamei-91.jpg
+  hide-from-google: true
 ---
 <!-- Course Heading -->
 <section class="bg-image-style min-h-[90vh]" style="background-image: url('{{page.heading.background_image}}');"></section>
