--- a/confidance.html
+++ b/confidance.html
@@ -116,8 +116,8 @@ seo:
 {% include video.html %}
 
 <!-- Course Description -->
-<section class="pt-10p px-10p pb-5p bg-image-style bg-overlay {{page.course-description.background-image.overlay_style}}" style="background-image: url('{{page.course-description.background-image.background_image}}'); background-position: {{page.course-description.background-image.image_focus}};">
-  <div class="text-center mb-12">
+<section class="md: pt-5p lg:pt-10p px-10p pb-5p bg-image-style bg-overlay {{page.course-description.background-image.overlay_style}}" style="background-image: url('{{page.course-description.background-image.background_image}}'); background-position: {{page.course-description.background-image.image_focus}};">
+  <div class="md:text-center mb-12">
       <h2 class="text-lg-serif text-feature">{{page.course-description.heading}}</h2>
       <p>{{page.course-description.description_html}}</p>
   </div>
@@ -257,7 +257,7 @@ seo:
 
     <!-- Right Column (text) -->
     <div class="flex items-center justify-center">
-      <div class="md:py-10p pr-10p md:pr-[20%] pl-10p md:pl-0">
+      <div class="pt-10p md:py-10p pr-10p md:pr-[20%] pl-10p md:pl-0">
         <div>
           <h2>Are you ready to meet every moment from a place of feeling <span class="font-serif">open, courageous,</span> and <span class="font-serif">full of creative inspiration</span>?</h2>
           <div>
